quarkus-gitops-demo/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 8524e14cb15887d86578f51507a7b9caf18f5ba0
    app.quarkus.io/build-timestamp: 2023-01-06 - 10:46:39 +0000
  labels:
    app.kubernetes.io/name: quarkus-gitop-demo
    app.kubernetes.io/version: "6.0"
    app.openshift.io/runtime: quarkus
  name: quarkus-gitop-demo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-gitop-demo
    app.kubernetes.io/version: "6.0"
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 8524e14cb15887d86578f51507a7b9caf18f5ba0
    app.quarkus.io/build-timestamp: 2023-01-06 - 10:46:39 +0000
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: quarkus-gitop-demo
    app.kubernetes.io/version: "6.0"
  name: quarkus-gitop-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-gitop-demo
      app.kubernetes.io/version: "6.0"
  template:
    metadata:
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: quarkus-gitop-demo
        app.kubernetes.io/version: "6.0"
    spec:
      containers:
        - image: quay.io/skraft/quarkus-gitop-demo:6.0
          imagePullPolicy: Always
          name: quarkus-gitop-demo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 8524e14cb15887d86578f51507a7b9caf18f5ba0
    app.quarkus.io/build-timestamp: 2023-01-06 - 10:46:39 +0000
  labels:
    app.kubernetes.io/name: quarkus-gitop-demo
    app.kubernetes.io/version: "6.0"
    app.openshift.io/runtime: quarkus
  name: quarkus-gitop-demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-gitop-demo
